[project]
name = "gnucash-select"
description = "GnuCash File Selector"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["gnucash"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "platformdirs",
]

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.edit-lint]
linters = [
  "ruff check",
  "pyright",
]

# vim:se sw=2:
