[project]
name = "gnucash-select"
description = "GnuCash File Selector"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["gnucash"]
dynamic = ["version"]
dependencies = [
  "platformdirs",
  "argparse-from-file",
]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

# vim:se sw=2:
